--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@ header {
     justify-content: space-between;
 }
 
+.txt {
+    color:#d32f2f;
+}
+
 nav {
     display: flex;
     align-items: center;
@@ -36,10 +40,12 @@ nav {
     font-weight: 600;
     text-decoration: none;
     align-items: end;
+    color:#d32f2f;
 }
 
 .nav__a:hover {
     text-decoration:underline;
+    color: red;
 }
 
 .form__button svg {
@@ -66,6 +72,7 @@ footer {
 
 .form_container h1{
     text-align:center;
+    color: #f5c518;
 }
 
 .form-reseña {
